--- a/website/public/index.html
+++ b/website/public/index.html
@@ -4,8 +4,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
     <base href="%PUBLIC_URL%" />
 
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="assets/flows_logo_round.png" type="image/x-icon" />
   <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
+  <link rel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
   <link
     rel="apple-touch-icon"
@@ -43,7 +45,7 @@
     href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900"
     rel="stylesheet"
   />
-  <title>FLOWS landing page</title>
+  <title>aiFlows</title>
   <meta name="description" content="" />
   <meta name="author" content="FLOWS project" />
 </head>
