Remove unused files.

--- a/website/public/index.html
+++ b/website/public/index.html
@@ -2,12 +2,11 @@
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <base href="%PUBLIC_URL%" />
+  <base href="%PUBLIC_URL%" />
 
   <link rel="shortcut icon" href="assets/flows_logo_round.png" type="image/x-icon" />
   <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
-  <link rel="stylesheet"
-href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
   <link
     rel="apple-touch-icon"
